# opc-social-content-automation

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LOOP_LOG.md  LOOP_LOG.md.bak  LOOP_LOG.md.pre262fix  LOOP_LOG_001-100.md  LOOP_LOG_101-200.md  LOOP_LOG_201-300.md  PROJECT_MAP.md  README.md  START_OPC.bat  admission_monitor.html  docker-compose.yml  entrypoint.sh  university_badges.json  vitreous_clarity.md
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/_bugfix_backup/services/: content_service.py  content_source_context.py  image_service.py  model_router.py  trend_browser_collector.py  workspace_service.py
backend/alembic/versions/: 0001_initial.py  0002_publish_records.py  (+11 more)
backend/app/: __init__.py  main.py
backend/tests/: test_api_contract.py  test_auth_bypass.py  test_content_delete.py  test_content_relevance.py  test_content_review_queue.py  test_content_source_context.py  test_content_variants.py  test_dependency_service.py  test_domain_switch.py  test_feedback_tags.py  test_health.py  test_image_service.py  test_knowledge_compilation.py  test_knowledge_service.py  test_mobile_auth.py  test_model_router.py  test_model_router_helpers.py  test_model_router_images.py  test_provider_status.py  test_public_image_text_smoke.py  test_review_service.py  test_style_reference_injection.py  test_task_lifecycle.py  test_trend_browser_collector.py  test_trend_browser_parsers.py  test_trend_browser_scripts.py  test_trend_service.py  test_web_search_service.py  test_workspace_service.py  topic_preset_helpers.py
(+317 files in other folders)
